# gausplat-renderer

./: Cargo.toml  README.md
benches/: jit_kernel.rs
benches/jit/: sort.rs
examples/data/3dgs-ply/: sixstars.3dgs.ply
src/: lib.rs
src/backend/: mod.rs
src/consts/: mod.rs  spherical_harmonics.rs
src/consts/gaussian_3d/: mod.rs
src/consts/render/: mod.rs
src/consts/spherical_harmonics/: mod.rs
src/error/: mod.rs
src/function/: mod.rs  spherical_harmonics.rs
src/function/spherical_harmonics/: mod.rs
src/function/tensor/: mod.rs
src/function/tensor_extensions/: backend.rs  float.rs  int.rs  mod.rs
src/function/tensor_extensions/shaders/: prefix_sum.wgsl
src/preset/: backend.rs  gaussian_3d.rs  mod.rs  render.rs  spherical_harmonics.rs
src/rasterizer/gaussian_3d/: mod.rs
src/render/: mod.rs
src/render/gaussian_3d/: backward.rs  forward.rs  mod.rs
src/render/gaussian_3d/jit/: mod.rs
src/render/view/: mod.rs  views.rs
src/renderer/gaussian_3d/: mod.rs  render_gaussian_3d_forward_1.wgsl  render_gaussian_3d_forward_3.wgsl  render_gaussian_3d_forward_4.wgsl  render_gaussian_3d_forward_5.wgsl  render_gaussian_3d_forward_6.wgsl
src/scene/: mod.rs
src/scene/gaussian_3d/: config.rs  export.rs  header.3dgs.ply  import.rs  mod.rs  property.rs
src/scene/gaussian_3d/render/: forward.rs  mod.rs
src/scene/gaussian_3d_laq/: export.rs  import.rs  mod.rs  property.rs
src/scene/laq/: dequantize.rs  mod.rs  normalize.rs  quantize.rs  round.rs  tinynet.rs
src/scene/point/: mod.rs  points.rs
src/spherical_harmonics/: mod.rs
(+78 files in other folders)
