[package]
description = "A library to render scenes for `gausplat`"
edition.workspace = true
license-file = "LICENSE"
name = "gausplat-renderer"
publish = false
readme = "README.md"
version.workspace = true

[dependencies]
gausplat-loader = {workspace = true}

burn = {workspace = true, features = ["autodiff", "default", "template", "wgpu"]}
burn-jit = {workspace = true}
bytemuck = {workspace = true, features = ["derive"]}
humansize = {workspace = true}
lazy_static = {workspace = true}
log = {workspace = true}
rand = {workspace = true}
rand_distr = {workspace = true}
rayon = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
burn = {workspace = true, features = ["ndarray"]}
divan = {workspace = true, features = ["default"]}

[[bench]]
harness = false
name = "jit-kernel"
path = "benches/jit_kernel.rs"
